# opengl_matsuzaki_sigeru

./: .editorconfig  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: cmake.yml  cmake_version.yml
OPENGL_MATSUZAKI_SIGERU/: .editorconfig  CMakeLists.txt
OPENGL_MATSUZAKI_SIGERU/src/: main.cpp
